[package]
name = "koba"
version = "0.1.0"
edition = "2021"
authors = ["Alexander Gonzalez <alexfertel97@gmail.com>"]

[dependencies]
brotli2 = "0.3.2"
bytesize = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
eyre = { version = "0.6", default-features = false, features = [
  "auto-install",
  "track-caller",
] }
hex = "0.4.3"
once_cell = "1.19.0"
regex = "1.10.4"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
wasmer = "3.1.0"
alloy = { git = "https://github.com/alloy-rs/alloy", rev = "c6c91cc", features = [
  "contract",
  "network",
  "node-bindings",
  "providers",
  "provider-http",
  "rpc-client",
  "rpc-types-eth",
  "signers",
  "signer-keystore",
  "signer-wallet",
  "getrandom",
] }
owo-colors = "4.0.0"
