[package]
name = "koba"
version = "0.1.0"
edition = "2021"
authors = ["OpenZeppelin Community <maintainers@openzeppelin.org>"]

[dependencies]
brotli2 = "0.3.2"
bytesize = "1.3.0"
clap = { version = "4.5.4", features = ["derive"] }
eyre = { version = "0.6", default-features = false, features = [
  "auto-install",
  "track-caller",
] }
hex = "0.4.3"
once_cell = "1.19.0"
regex = "1.10.4"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
wasmer = "3.1.0"
alloy = { version = "0.1.1", features = [
  "contract",
  "network",
  "providers",
  "provider-http",
  "rpc-client",
  "rpc-types-eth",
  "signer-keystore",
  "signer-local",
  "getrandom",
] }
owo-colors = "4.0.0"
